--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ requires-python = ">=3.12"
 dependencies = [
     "loguru>=0.7.3",
     "pymupdf>=1.26.3",
+    "pytest>=8.4.1",
     "python-docx>=1.2.0",
 ]
